some colour changes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!--     Bicycle SVG -->
      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
      <!-- Generator: Adobe Illustrator 12.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 51448)  -->
-         <svg
+         <!-- <svg
                  xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
                  xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
                  xmlns="http://www.w3.org/2000/svg"
@@ -313,7 +313,7 @@
                     points="357.82 179.76 326.69 188.66 323.2 189.13 322.08 189.13 319.7 189.45 316.21 189.45 313.83 189.13 312.71 189.13 311.44 188.81 310.33 188.66 305.57 186.91 304.3 186.27 303.02 185.32 301.92 184.05 300.48 180.88"
                     fill="currentColor"            />
               </g>
-           </svg>
+           </svg> -->
 
       <img src="/IMAGES/coder.svg" alt="coder SVG" id="svg8">
       
@@ -325,14 +325,22 @@
                <img src="IMAGES\mePic.PNG" class="me-pics" id="me-pic" alt="pic of me">
                <div class="me-text-div" id="me-text-div1">
                   <div class="inner-text-div">
-                     <p>An entam ores, natus  and  padding: 40px 80px;interest ine sdfhu y oy oiaoi iuh  new and emerging technologies.</p>
+                     <p>I'm an enthusiastic and avid learner of new and
+                        emerging technologies.
+                        I have been coding
+                         independantly for over a year and have recently
+                     </p>
                   </div>
                   <div class="inner-text-div">
-                     <p>ibusdam prendis omnis aup and  padding: 40px 80px;interest i antas nisi!
-                     Tempore quam consequuntur odio alexpedita harum!</p>
+                     <p>expanded my coding skills by completing an 
+                        intesive twelve week software development
+                        bootcamp.</p>
                   </div>
                   <div class="inner-text-div">
-                     <p>s iusto officiis susisi!,,,, nnnnnnnnn nnnnnnn nnnnnnnnnn nnnnnnnnn nnnn nnnnnnnTs nobis reiciendis, expedita h</p>
+                     <p>I am seeking either a full-time apprenticeship
+                        postion or a role junior developer.
+                        I am currently based in London but am
+                        open to relocation should the right opportunity require it.</p>
                   </div>
                </div>
                <img src="IMAGES/kona_surf_session.jpg" class="me-pics" id="kona-pic"  alt="me-surfing">
@@ -356,22 +364,22 @@
             <div class="project-image-div">
                <img src="IMAGES\visa_calc.png">
             </div>
-            <button type="button" class="collapsible">Open Section 1</button>
+            <button type="button" class="collapsible">Project Outline</button>
             <div class="content">
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-            <button type="button" class="collapsible">Open Section 2</button>
+            <button type="button" class="collapsible">Technologies Used</button>
             <div class="content">
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-            <button type="button" class="collapsible">Open Section 3</button>
+            <button type="button" class="collapsible">Technical Approach</button>
             <div class="content">
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
             <div class="project-links-container">
                <div class="project-links-wrap">
                   
-                  <a><img src="IMAGES\gitHubIcon.svg" 
+                  <a href="https://github.com/Michaleen/" target="_blank"><img src="IMAGES\gitHubIcon.svg" 
                         class="git-hub-project-icon" 
                         style="width:40%" 
                         alt="git hub icon">
@@ -379,7 +387,7 @@
                   <p class="git-link-text">Inspect Code</p>
                </div>
                <div class="project-page-link">
-                  <p>View Project</p>
+                  <a href="https://michaelcarey.tech/VISA%20CALCULATOR/SHENGEN%20VISA%20CALC/index.html" target="_blank"><p>View Project</p></a>
                </div>
             </div>
          </div>
@@ -391,21 +399,21 @@
             <div class="project-image-div">
                <img src="IMAGES\piano_pic.png">
             </div>
-            <button type="button" class="collapsible">Open Section 1</button>
+            <button type="button" class="collapsible">Project Outline</button>
             <div class="content">
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-            <button type="button" class="collapsible">Open Section 2</button>
+            <button type="button" class="collapsible">Technologies Used</button>
             <div class="content">
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-            <button type="button" class="collapsible">Open Section 3</button>
+            <button type="button" class="collapsible">Technical Approach</button>
             <div class="content">
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
             <div class="project-links-container">
                <div class="project-links-wrap">
-                  <a><img src="IMAGES\gitHubIcon.svg" 
+                  <a href="https://github.com/Michaleen/myPiano" target="_blank"><img src="IMAGES\gitHubIcon.svg" 
                      class="git-hub-project-icon" 
                      style="width:40%" 
                      alt="git hub icon">
@@ -413,7 +421,7 @@
                   <p class="git-link-text">Inspect Code</p>
                </div>
                <div class="project-page-link">
-                  <p>View Project</p>
+                  <a href="https://michaelcarey.tech/PIANO/myPiano/index.html" target="_blank"><p>View Project</p></a>
                </div>
             </div>
          </div>
@@ -425,21 +433,21 @@
             <div class="project-image-div">
             <img src="IMAGES\database_pic.png">
             </div>
-            <button type="button" class="collapsible">Open Section 1</button>
+            <button type="button" class="collapsible">Project Outline</button>
             <div class="content">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-            <button type="button" class="collapsible">Open Section 2</button>
+            <button type="button" class="collapsible">Technologies Used</button>
             <div class="content">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-            <button type="button" class="collapsible">Open Section 3</button>
+            <button type="button" class="collapsible">Technical Approach</button>
             <div class="content">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
             <div class="project-links-container">
                <div class="project-links-wrap">
-                  <a><img src="IMAGES\gitHubIcon.svg"
+                  <a href="https://github.com/Michaleen/PYTHON_PROJECT" target="_blank"><img src="IMAGES\gitHubIcon.svg"
                      class="git-hub-project-icon" 
                      style="width:40%" 
                      alt="git hub icon">
@@ -447,7 +455,7 @@
                   <p class="git-link-text">Inspect Code</p>
                </div>
                <div class="project-page-link">
-                  <p>View Project</p>
+                  <a href="https://michaelcarey.tech/FILMDATABASE/iframe-practice.html"><p>View Project</p></a>
                </div>
             </div>
          </div>
@@ -476,7 +484,29 @@
                <img src="/IMAGES/jquery.svg" alt="JQUERY SVG" class="technology skills2 hidden ">
             </div>
          </div>
-         <div class="education-table"></div>
+         <div class="edu-div">
+            <div id="edu-heading"></div>
+            <div width="600px">
+               <table class="edu-table">
+               <thead>
+                 <tr>
+                   <th>Qualification</th>
+                   <th>Place of Study</th>
+                   <th>Time Period</th>
+                 </tr>
+               </thead>
+               <tr>
+                 <td>DipOfHE Information Management and Finance</td>
+                 <td>University of Westminster</td>
+                 <td>dates</td>
+               </tr>
+               <tr>
+                 <td>Level 3 Software Development Bootcamp</td>
+                 <td>JustIT</td>
+                 <td>dates</td>
+               </tr>
+             </table></div>
+         </div>
       <!-- </div> -->
 
 
@@ -495,7 +525,7 @@
                <input type="email" name="email" id="email-field" required>
                <label for="message-text">Message</label>
                <textarea  class="form-control" name="message" rows="10" required></textarea>
-               <input type="hidden" name="_next" value="https://netflix.com.html">
+               <input type="hidden" name="_next" value="http://michaelcarey.tech/">
                <input type="hidden" name="_captcha" value="false">
                <div class="submit-btn-div">
                   <button type="submit" id="submit-button">Submit</button>
